<resources>
    <string name="app_name">recipesBook</string>
    <string name="add_recipe">add recipe</string>
    <string name="recipe_image">recipe image</string>
    <string name="recipe_text" >
    Test text. Test text. Test text. Test text. Test text. \n
    Test text. Test text. Test text. Test text. Test text.
    </string>
    <string name="all_recipes">All recipes</string>
    <string name="favorites">Favorites</string>
    <string name="new_recipe_hint">Start to write...</string>
    <string name="description_recipe_save">Save recipe</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="in_favorites">in favorites</string>
    <string name="recipe_step_image">recipe step image</string>
    <string name="remove">remove</string>
    <string name="menu_edit">edit</string>
    <string name="new_step_image">Image URL</string>
    <string name="new_recipe_category">Choose category...</string>
    <string name="new_recipe_name">Write recipe name...</string>
    <string name="edited_recipe">Create/Edit recipe</string>
    <string name="add_steps">Add steps:</string>
    <string name="main_image">main image link...</string>
    <string name="fill_fields">Fill Name and Category fields first</string>
    <string name="step_needed">Recipe must contain at least 1 step</string>
    <string name="search">Search</string>
    <string name="mainImageForEmptyData">Main image for empty data</string>
    <string name="search_hint">start searching...</string>
    <string name="choose_category">Choose categories</string>
    <string name="category_EUROPEAN">EUROPEAN</string>
    <string name="category_ASIAN">ASIAN</string>
    <string name="category_PANASIAN">PANASIAN</string>
    <string name="category_EASTERN">EASTERN</string>
    <string name="category_AMERICAN">AMERICAN</string>
    <string name="category_RUSSIAN">RUSSIAN</string>
    <string name="category_MEDITERRANEAN">MEDITERRANEAN</string>
    <string name="category_filter">category filter</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="steps_must_be_saved">Every steps must be approved</string>

</resources>