<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/chooseCategoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choose_category"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/europeanCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/category_EUROPEAN" />

    <CheckBox
        android:id="@+id/asianCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/category_ASIAN" />

    <CheckBox
        android:id="@+id/panasianCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/category_PANASIAN" />

    <CheckBox
        android:id="@+id/easternCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/category_EASTERN" />

    <CheckBox
        android:id="@+id/americanCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/category_AMERICAN" />

    <CheckBox
        android:id="@+id/russianCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/category_RUSSIAN" />

    <CheckBox
        android:id="@+id/mediterraneanCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/category_MEDITERRANEAN" />

</androidx.appcompat.widget.LinearLayoutCompat>