<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/min_spacing"
    android:id="@+id/recipeStepContent"
    >

    <EditText
        android:id="@+id/stepText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="start|top"
        android:hint="@string/new_recipe_hint"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/stepImage"
        tools:text="@string/recipe_text" />

    <EditText
        android:id="@+id/stepImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="start|top"
        android:hint="@string/new_step_image"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepText"
        tools:text="@string/new_step_image"
    />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/deleteStepButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete_step_24" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/saveStepButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteStepButton"
        app:srcCompat="@drawable/ic_ok_12dp_for_step_black" />


</androidx.constraintlayout.widget.ConstraintLayout>